# digital-image-processing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
affine-transformation/: CMakeLists.txt  main.cpp
histogram-equalization/: CMakeLists.txt  main.cpp
histogram-matching/: CMakeLists.txt  main.cpp
histogram-statistics/: CMakeLists.txt  main.cpp
intensity-transformation/: CMakeLists.txt  main.cpp
interpolation/: CMakeLists.txt  main.cpp
sharpening-spatial-filters/: CMakeLists.txt  main.cpp
smoothing-spatial-filters/: CMakeLists.txt  main.cpp
spatial-correlation-convolution/: CMakeLists.txt  main.cpp
transformation/: CMakeLists.txt  main.cpp
utility/: CMakeLists.txt  NamedType.h  utility.cpp  utility.h
