cmake_minimum_required(VERSION 3.0.0)
project(digital-image-processing)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS OFF)

add_subdirectory(interpolation)
add_subdirectory(intensity-transformation)
add_subdirectory(affine-transformation)
add_subdirectory(histogram-equalization)
add_subdirectory(histogram-matching)
add_subdirectory(histogram-statistics)
add_subdirectory(spatial-correlation-convolution)
add_subdirectory(smoothing-spatial-filters)
add_subdirectory(sharpening-spatial-filters)
add_subdirectory(utility)
